--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                      <h1 class="heading">Terra</h1>
                                 <p style="font-size:22px" class="subheading">Born to be A Game Changer</p><br><br>
                                 <p style="font-size:22px" class="subheading">Open Sale: <i class="fa fa-rupee"></i>&nbsp;21,999</p><br>
-                                <p style="font-size:22px" class="subheading" style="color:#E8382F">With Q-Invite: <i class="fa fa-rupee"></i>&nbsp;19,999</p><br>
+                                <p style="font-size:22px;color:#E8382F" class="subheading" style="color:#E8382F">With Q-Invite: <i class="fa fa-rupee"></i>&nbsp;19,999</p><br>
                                  <div class="extra-space-l"></div>
                                 <a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Buy Now</a>
 <div class="extra-space-l "></div>
