--- a/qikuterra.html
+++ b/qikuterra.html
@@ -228,7 +228,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                             <li><a class="page-scroll" href="qikuterra.html">Qiku Terra</a></li>
                             <li><a class="page-scroll" href="/">All Products</a>
                             	<ul>
-                                    <li><a href="qikuterra.html">Q Terra</a></li>
+                                    <li><a href="/">Q Terra</a></li>
                                     <li><a href="#">Accessories</a></li>
                                 </ul>
                             </li>
