--- a/qikuterra/parameter.html
+++ b/qikuterra/parameter.html
@@ -219,7 +219,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                     <h2 class="name"><img class="navigation-img" src="../img/qiku-logo.png" ></h2>
                 </div>
                     <ul class="nav navbar-nav navbar-right">
-                            <li><a class="page-scroll" href="qikuterra.html">Qiku Terra</a></li>
+                            <li><a class="page-scroll" href="/">Qiku Terra</a></li>
                             <li><a class="page-scroll" href="/">All Products</a>
                             	<ul>
                                     <li><a href="qikuterra.html">Q Terra</a></li>
