--- a/qikuterra.html
+++ b/qikuterra.html
@@ -303,7 +303,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
             <div class="container">
                 <div class="content">
                     <h3 class="h3">Intelligent Dual Rear Cameras<br/>13MP + 13MP</h3>
-                    <p class="desc">QiKU Terra boasts the strongest cameras in the smartphone industry to date. When shooting moments, it takes advantage of the dual rear camerasâ€™ unique design even without ugly protrusion. The subjects are autofocused within 0.1 second by instant triangulation. Within QiKU Terra, youâ€™re going to enjoy the best camerasâ€™ performance, brilliant than ever.</p>
+                    <p class="desc">QiKU Terra boasts the strongest cameras in the smartphone industry to date. When shooting moments, it takes advantage of the dual rear cameras unique design even without ugly protrusion. The subjects are autofocused within 0.1 second by instant triangulation. Within QiKU Terra, you are going to enjoy the best camera performance, brilliant than ever.</p>
                     <p class="linka"><a class="linka" href="qikuterra/camera.html" target="_blank">Learn more about cameras ></a></p>
 
                 </div>
@@ -321,7 +321,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
             <div class="container">
                 <div class="content">
                     <h3 class="h3">A Sense of Beauty</h3>
-                    <p class="desc">QiKU designers never stop pursuing beauty.<br/><br/><span style="letter-spacing:0.2px;">Ergonomic, transparent 2.5D glass is the perfect choice for Sharp's next-generation, super-radiant screen.</span><br/><span style="letter-spacing:0.7px;">At just 1.4 mm wide, the narrow bezel gives the phone an astounding screen-to-body ratio of 83 percent.</span><br/><br/>Itâ€™s time to take a multimedia journey with the QiKU phone in hand.</p>
+                    <p class="desc">QiKU designers never stop pursuing beauty.<br/><br/><span style="letter-spacing:0.2px;">Ergonomic, transparent 2.5D glass is the perfect choice for Sharp's next-generation, super-radiant screen.</span><br/><span style="letter-spacing:0.7px;">At just 1.4 mm wide, the narrow bezel gives the phone an astounding screen-to-body ratio of 83 percent.</span><br/><br/>It's time to take a multimedia journey with the QiKU phone in hand.</p>
                     <p class="linka"><a class="linka" href="qikuterra/design.html" target="_blank">Learn more about designs and craftsmanship ></a></p>
                 </div>
                 <div class="img">
