--- a/qikuterra/camera.html
+++ b/qikuterra/camera.html
@@ -273,7 +273,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 	<div class="container">
         <div class="content">
         	<h3 class="h3">13MP Intelligent<br/>Dual Rear Cameras<br/>Reinvention for a better<br/> experience</h3>
-            <p class="desc">Image enhancement by increasing the size of the camera light sensor requires a larger camera module. This leads to a slightly protruding camera that reduces the attractiveness of the phoneâ€™s exterior. If the size of the light sensor is fixed and only the pixels are upgraded to improve image quality, the amount of light per unit area for each pixel will decrease. As a result, the camera cannot capture the best quality images and include every little detail. After nearly a year of R&D, QiKU has taken an innovative step forward to introduce the concept of Color + Mono black-and-white night vision + 13 MP double-camera smart design.
+            <p class="desc">Image enhancement by increasing the size of the camera light sensor requires a larger camera module. This leads to a slightly protruding camera that reduces the attractiveness of the phone's exterior. If the size of the light sensor is fixed and only the pixels are upgraded to improve image quality, the amount of light per unit area for each pixel will decrease. As a result, the camera cannot capture the best quality images and include every little detail. After nearly a year of R&D, QiKU has taken an innovative step forward to introduce the concept of Color + Mono black-and-white night vision + 13 MP double-camera smart design.
 </p>
         </div>
         <div class="img">
@@ -412,7 +412,7 @@ Coupled with deep refinement through double-camera real-time processing, these f
 	<div class="container">
         <div class="content">
         	<h3 class="h3">8MP front-facing camera<br/>Count the details</h3>
-            <p class="desc">Image quality is a basic requirement of the perfect<br/> selfie. QiKU features an 8MP front-facing camera<br/> and a pixel size of 1.4 Î¼m to capture more light per<br/> pixel. Now, just press the shutter and wait for the<br/> clear and rich photo to light up your screen.</p>
+            <p class="desc">Image quality is a basic requirement of the perfect<br/> selfie. QiKU features an 8MP front-facing camera<br/> and a pixel size of 1.4 μm to capture more light per<br/> pixel. Now, just press the shutter and wait for the<br/> clear and rich photo to light up your screen.</p>
         </div>
     </div>
 </div>
