--- a/qikuterra/design.html
+++ b/qikuterra/design.html
@@ -311,8 +311,8 @@ The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body rati
 <div class="section sj-function04 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">165Â° palm curved design<br/>Palm friendly</h3>
-            <p class="desc">Considering the best ergonomic hand feeling for users, we take human engineering factors into account,<br/> discovering that 165Â° arc is the most natural palm curved design, relaxing and comfortable.</p>
+        	<h3 class="h3">165° palm curved design<br/>Palm friendly</h3>
+            <p class="desc">Considering the best ergonomic hand feeling for users, we take human engineering factors into account,<br/> discovering that 165° arc is the most natural palm curved design, relaxing and comfortable.</p>
         </div>
         <div class="img">
         	<div class="sj4-1"><img src="../images/qikuterra/sj4-1.png" alt=""/></div>
