--- a/qikuterra/parameter.html
+++ b/qikuterra/parameter.html
@@ -312,7 +312,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
         <div class="rightbox">
             <dl>
                 <dd><b>Intelligent Rear Dual Cameras</b></dd>
-                <dd>Sony IMX278 + Sony MONOï¼ˆblack & whiteï¼‰</dd>
+                <dd>Sony IMX278 + Sony MONO (black & white）</dd>
                 <dd>13MP + 13MP</dd>
                 <dd>f/1.8 aperture</dd>
                 <dd>6P lenses</dd>
@@ -327,7 +327,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                 <dd>Record location when take picture</dd>
                 <dd>Timer picture (countdown)</dd>
                 <dd><b>Front Camera</b></dd>
-                <dd>8MP with 1.4Î¼m pixels</dd>
+                <dd>8MP with 1.4 μm pixels</dd>
                 <dd>Grid line</dd>
                 <dd>Face detect(face info save)</dd>
                 <dd>Front photo mirror</dd>
@@ -365,7 +365,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
         <div class="rightbox">
             <dl>
                 <dd><img src="../images/qikuterra/p-processor.jpg"></dd>
-                <dd class="processor">64-bit QualcommÂ© Snapdragonâ„¢ 808<br/>Adreno418 GPU</dd>
+                <dd class="processor">Qualcomm© Snapdragon™ 808<br/>Adreno418 GPU</dd>
             </dl>
         </div>
     </div>
@@ -497,11 +497,11 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
         </div>
         <div class="rightbox">
             <dl>
-                <dd>TDD-LTE ï¼šB38/B39/B40/B41 </dd>
-                <dd>FDD-LTEï¼š B1/B3/B7</dd>
-                <dd>TD-SCDMA ï¼šB34/B39</dd>
-                <dd>WCDMAï¼šB1/B2/B5/B8</dd>
-                <dd>GSMï¼šB2/B3/B5/B8</dd>
+                <dd>TDD-LTE ：B38/B39/B40/B41 </dd>
+                <dd>FDD-LTE： B1/B3/B7</dd>
+                <dd>TD-SCDMA ：B34/B39</dd>
+                <dd>WCDMA：B1/B2/B5/B8</dd>
+                <dd>GSM：B2/B3/B5/B8</dd>
             </dl>
         </div>
     </div>
