--- a/qikuterra/performance.html
+++ b/qikuterra/performance.html
@@ -270,7 +270,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 	<div class="container">
         <div class="content">
         	<h3 class="h3">The Cores We Choose Snapdragon 808 for Better Performance<br/>Start from 64-bit Processor</h3>
-            <p class="desc">In order to meet usersâ€™ smooth daily multitasks, we chose killer match for Terra. You donâ€™t have to worry for multitasking games, movies and those memory-intensive apps any more. These processors also improve 30% performance and save 20% power consumption.</p>
+             <p class="desc">In order to meet users’ smooth daily multitasks, we chose killer matches for QiKU Terra and Terra prime. You don’t have to worry for multitasking games, movies and those memory-intensive apps any more. These processors also improve 30% performance and save 20% power consumption.</p>
             <p class="xn1-p1">6-core processor</p>
             <p class="xn1-p2">64-bit Snapdragon 808 processor</p>
             <p class="xn1-p3">3GB</p>
@@ -291,8 +291,8 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 <div class="section xn-function02 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">Exclusive Space Cooling Process<br/>Better to Solve Androidâ€™s Heating Problem</h3>
-            <p class="desc">The space cooling mechanism applied in Terra is to cool the phone down when it runs intensely. The cooling process works the same way as satellitesâ€™ cooling process. Inside the phone structure, there is a tiny pipe inserted with flowing liquid, flowing to high temperature end going diffused, flowing to low temperature end going coagulated. With this circulation we ensure both ends temperature are well balanced and the handset doesnâ€™t get that heat. Free play and play hard. </p>
+        	<h3 class="h3">Exclusive Space Cooling Process<br/>Better to Solve Android's Heating Problem</h3>
+            <p class="desc">The space cooling mechanism applied in Terra is to cool the phone down when it runs intensely. The cooling process works the same way as satellite's cooling process. Inside the phone structure, there is a tiny pipe inserted with flowing liquid, flowing to high temperature end going diffused, flowing to low temperature end going coagulated. With this circulation we ensure both ends temperature are well balanced and the handset doesn't get that heat. Free play and play hard. </p>
         </div>
         <div class="img">
         	<div class="xn2"><img src="../images/qikuterra/xn2.png" width="810" height="757" alt="" /></div>
@@ -353,7 +353,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 	<div class="container">
         <div class="content">
         	<h3 class="h3">Powerful Fingerprint Managements<br/>Within 1 Second, Easy and Safe</h3>
-            <p class="desc">You can record your fingerprint first and begin to experiencing its powerful management for apps. Youâ€™ll no longer need to input complicated passwords and worry that you forget the numbers and characters. Fingerprint helps you enter most apps directly within 1 second, really easy and safe. </p>
+            <p class="desc">You can record your fingerprint first and begin to experiencing its powerful management for apps. You'll no longer need to input complicated passwords and worry that you forget the numbers and characters. Fingerprint helps you enter most apps directly within 1 second, really easy and safe. </p>
             <p class="xn6-text1 desc">Unlock the Phone <br/>
                 Payment (the 3rd party app must support fingerprint)<br/>
                 Instant Camera<br/>
