--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill main-slider-bakcground-alignment" style="background-image:url('img/SaleBanner.png');"></div>
+                <div class="fill main-slider-bakcground-alignment" style="background-image:url('img/SaleBanner.jpg');"></div>
                 <div class="carousel-caption right-10">
                     <div class="col-md-6 col-sm-6 col-xs-12 pull-right text-left slider-3-text">
                      <h1 class="heading">Terra</h1>
-                                <p style="font-size:22px" class="subheading">Born to be A Game Changer</p><br><br>
+                                <p style="font-size:22px" class="subheading">Born to Be A Game Changer</p><br><br>
                                 <p style="font-size:22px" class="subheading">Open Sale: <i class="fa fa-rupee"></i>&nbsp;21,999</p><br>
                                 <p style="font-size:22px;color:#E8382F" class="subheading" style="color:#E8382F">With Q-Invite: <i class="fa fa-rupee"></i>&nbsp;19,999</p><br>
                                  <div class="extra-space-l"></div>
-                                <a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Buy Now</a>
+                                <a class="btn btn-blank f_27" target="_blank" href="https://gadgets360.com/shop/qiku-q-terra-silver-16-gb-3235322d333938" role="button" >Buy Now &gt;&gt;</a>
 <div class="extra-space-l "></div>
 
                     </div>
