--- a/qikuterra.html
+++ b/qikuterra.html
@@ -226,20 +226,20 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                 </div>
                     <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="qikuterra.html">Qiku Terra</a></li>
-                            <li><a class="page-scroll" href="/">All Products</a>
+                            <li><a class="page-scroll">All Products</a>
                             	<ul>
                                     <li><a href="/">Q Terra</a></li>
                                     <li><a href="#">Accessories</a></li>
                                 </ul>
                             </li>
                             <li><a class="page-scroll" href="/in/360os.html">360OS</a></li>
-                            <li><a class="page-scroll" href="https://forums.qiku.com" target="_blank">Community</a>
+                            <li><a class="page-scroll">Community</a>
                             	<ul>
                             		<li><a href="http://blog.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Blog&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                             		<li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Forum&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                             	</ul>
                             </li>                        
-                            <li><a class="page-scroll" href="#prices-section">Global</a>
+                            <li><a class="page-scroll">Global</a>
                             	<ul>
                             		<li><a href="http://www.qiku.com/index.html">中国</a></li>
                                     <li><a href="http://www.qiku.com/ru/qikuterra.html">Россия</a></li>
@@ -283,7 +283,7 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                     <p class="fun01-desc3">Full-Metal Unibody Design</p>
                     <p class="fun01-desc4">Snapdragon 808</p>
                     <p class="fun01-desc5">Sharp 1080P Screen</p>
-                    <p class="fun01-desc6">165Â° Arc Curved Design</p>
+                    <p class="fun01-desc6">165° Arc Curved Design</p>
                     <p class="fun01-desc7">2.5D Arc Glass</p>
                     <p class="fun01-desc8">3700mAh Battery </p>
                     <p class="fun01-desc9">1.4mm Ultra Narrow Bezel</p>
