--- a/index.html
+++ b/index.html
@@ -64,20 +64,20 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="qikuterra.html">Qiku Terra</a></li>
-                            <li><a class="page-scroll" href="#about-section">All Products</a>
+                            <li><a class="page-scroll">All Products</a>
                             	<ul>
                             		<li><a href="qikuterra.html">Q Terra</a></li>
                             		<li><a href="#">Accessories</a></li>
                             	</ul>
                             </li>
                             <li><a class="page-scroll" href="/in/360os.html">360OS</a></li>
-                            <li><a class="page-scroll" href="https://forums.qiku.com" target="_blank">Community</a>
+                            <li><a class="page-scroll" target="_blank">Community</a>
                             	<ul>
                             		<li><a href="http://blog.qiku.com" target="_blank">&nbsp;&nbsp;Blog&nbsp;&nbsp;</a></li>
                             		<li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;Forum&nbsp;&nbsp;</a></li>
                             	</ul>
                             </li>                        
-                            <li><a class="page-scroll" href="#prices-section">Global</a>
+                            <li><a class="page-scroll">Global</a>
                             	<ul>
                             		<li><a href="http://www.qiku.com/index.html">中国</a></li>
                                     <li><a href="http://www.qiku.com/ru/qikuterra.html">Россия</a></li>
@@ -112,7 +112,7 @@
                 <div class="carousel-caption right-10">
                     <div class="col-md-6 col-sm-6 col-xs-12 pull-right text-left slider-3-text">
                      <h1 class="heading">Terra</h1>
-                                <p style="font-size:22px" class="subheading">Born to Be A Game Changer</p><br><br>
+                                <p class="subheading">Born to Be A Game Changer</p><br><br>
                                 <p style="font-size:22px" class="subheading">Open Sale: <i class="fa fa-rupee"></i>&nbsp;21,999</p><br>
                                 <p style="font-size:22px;color:#E8382F" class="subheading" style="color:#E8382F">With Q-Invite: <i class="fa fa-rupee"></i>&nbsp;19,999</p><br>
                                  <div class="extra-space-l"></div>
