--- a/qikuterra/photo.html
+++ b/qikuterra/photo.html
@@ -219,24 +219,24 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                 </div>
                     <ul class="nav navbar-nav navbar-right">
                             <li><a class="page-scroll" href="/">Qiku Terra</a></li>
-                            <li><a class="page-scroll" href="/">All Products</a>
-                            	<ul>
+                            <li><a class="page-scroll">All Products</a>
+                                <ul>
                                     <li><a href="qikuterra.html">Q Terra</a></li>
                                     <li><a href="#">Accessories</a></li>
                                 </ul>
                             </li>
                             <li><a class="page-scroll" href="/in/360os.html">360OS</a></li>
-                            <li><a class="page-scroll" href="https://forums.qiku.com" target="_blank">Community</a>
-                            	<ul>
-                            		<li><a href="http://blog.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Blog&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                            		<li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Forum&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                            	</ul>
+                            <li><a class="page-scroll">Community</a>
+                                <ul>
+                                    <li><a href="http://blog.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Blog&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                                    <li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Forum&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+                                </ul>
                             </li>                        
-                            <li><a class="page-scroll" href="#prices-section">Global</a>
-                            	<ul>
-                            		<li><a href="http://www.qiku.com/index.html">中国</a></li>
+                            <li><a class="page-scroll">Global</a>
+                                <ul>
+                                    <li><a href="http://www.qiku.com/index.html">中国</a></li>
                                     <li><a href="http://www.qiku.com/ru/qikuterra.html">Россия</a></li>
-                            	</ul>
+                                </ul>
                             </li>
                         </ul>
                </div>
