--- a/360os.html
+++ b/360os.html
@@ -23,7 +23,7 @@
             <div class="head">
                 <a href="360os.html" class="logo"></a>
                 <ul class="head_nav">
-                    <li><a style="color:#0099ff" href="/">Home</a></li>
+                    <li><a style="color:#0099ff" href="/in/index.html">Home</a></li>
                     <li><a href="../en/qikuterra.html" target="_blank">&nbsp;</a></li>
                     <li class="current"><a href="360os.html" class="current">&nbsp;</a></li>
                 </ul>
