text and nav changes

--- a/qikuterra/design.html
+++ b/qikuterra/design.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
         <meta charset="utf-8">
-        <title>Qiku Q terra</title>
+        <title>Qiku Q Terra</title>
         <meta name="keywords" content="qiku,terra,mall">
         <meta name="description" content="qiku mall">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -235,10 +235,13 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                                     <li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Forum&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                                 </ul>
                             </li>                        
-                            <li><a class="page-scroll">Global</a>
-                                <ul>
-                                    <li><a href="http://www.qiku.com/index.html">中国</a></li>
-                                    <li><a href="http://www.qiku.com/ru/qikuterra.html">Россия</a></li>
+                            <li><a class="page-scroll">Select Region</a>
+                                <ul class="map">
+                                    <li><a href="http://www.qiku.com/en"><img src="/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
+                                    <li><a href="#"><img src="/img/chinese1-map.png" style="margin-bottom:-6px;" />&nbsp;<span>简体中文</span></a></li>
+                                    <li><a href="http://www.qiku.com/ru"><img src="/img/Россия-map.png" style="margin-bottom:-3px;" />&nbsp;<span>Россия</span></a></li>
+                                    <li><a href="http://www.qiku.com/in"><img src="/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
+                                    <li><a href="http://www.qiku.com/hk"><img src="/img/chinese2-map.png" style="margin-bottom:-6px;" />&nbsp;<span>中国&nbsp;&nbsp;</span></a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -271,8 +274,8 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 <div class="section sj-function01 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">2.5D glass<br/>Crystal clear, smooth and fine</h3>
-            <p class="desc">Terra will take you on an extraordinary visual and usage tour. The 2.5D glass screen outshines ordinary<br/> glass with its round edge and super transparency. Fall in love the minute you touch the sparkling screen.</p>
+        	<h3 class="h3">2.5D Glass<br/>Crystal Clear, Smooth And Fine</h3>
+            <p class="desc">Q Terra will take you on an extraordinary visual and usage tour. The 2.5D glass screen outshines ordinary<br/> glass with its round edge and super transparency. Fall in love the minute you touch the sparkling screen.</p>
         </div>
         <div class="img">
         	<div class="sj1-1"><img src="../images/qikuterra/sj1-1.png" width="360" height="601"  alt=""/></div>
@@ -284,9 +287,9 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 <div class="section sj-function02 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">83% display ratio 1.4mm side bezel<br/>Bigger Is Always Better</h3>
+        	<h3 class="h3">83% Display Ratio 1.4mm Side Bezel<br/>Bigger Is Always Better</h3>
             <p class="desc">Astounding screen-to-body ratio of 83 percent, 1.4 mm ultra-narrow bezel
-The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body ratio of 83 percent, and a bezel width of just 1.4 mm. <br/>The exquisite design gives a perfect appearance of Terra, and bringing the optimum experience.
+The freedom to be delighted. <br/>Q Terra boasts an astounding screen-to-body ratio of 83 percent, and a bezel width of just 1.4 mm. <br/>The exquisite design gives a perfect appearance of Q Terra, and bringing the optimum experience.
 </p>
         </div>
         <div class="img">
@@ -299,8 +302,8 @@ The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body rati
 <div class="section sj-function03 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">Full-Metal Unibody Design<br/>Reinforced beauty and texture</h3>
-            <p class="desc">The inherent high-quality texture of the metal is unmatched by plastic or glass. After 200 processes of <br/>intricate polishing, a piece of light but strong aluminum alloy used in aircraft emerges as the integrated <br/>case of the Terra. </p>
+        	<h3 class="h3">Full-metal Unibody Design<br/>Reinforced Beauty And Texture</h3>
+            <p class="desc">The inherent high-quality texture of the metal is unmatched by plastic or glass. After 200 processes of <br/>intricate polishing, a piece of light but strong aluminum alloy used in aircraft emerges as the integrated <br/>case of the Q Terra. </p>
         </div>
         <div class="img">
         	<div class="sj3-1"><img src="../images/qikuterra/sj3-1.png" width="758" height="582" alt=""/></div>
@@ -313,8 +316,8 @@ The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body rati
 <div class="section sj-function04 animate-init">
 	<div class="container">
         <div class="content">
-        	<h3 class="h3">165° palm curved design<br/>Palm friendly</h3>
-            <p class="desc">Considering the best ergonomic hand feeling for users, we take human engineering factors into account,<br/> discovering that 165° arc is the most natural palm curved design, relaxing and comfortable.</p>
+        	<h3 class="h3">165° Palm Arc Design<br/>Palm Friendly</h3>
+            <p class="desc">Considering the best ergonomic hand feeling for users, we take human engineering factors into account,<br/> discovering that 165° arc is the most natural palm handing design, relaxing and comfortable.</p>
         </div>
         <div class="img">
         	<div class="sj4-1"><img src="../images/qikuterra/sj4-1.png" alt=""/></div>
@@ -333,7 +336,7 @@ The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body rati
 	<div class="container">
         <div class="content">
         	<h3 class="h3">Same Sand Blasting Craftsmanship as <br/>iPhone 6s Plus</h3>
-            <p class="desc">Instead of a cold surface, Terra provides a texture that is <br/>as smooth as satin with the 3D sand blasting technique. It is <br/>comfortable to hold the phone in the hand thanks to the<br/> polished zirconia beads and microscopic sand<br/> blasting, which is comparable to <br/>the iPhone 6s Plus.</p>
+            <p class="desc">Instead of a cold surface, Q Terra provides a texture that is <br/>as smooth as satin with the 3D sand blasting technique. It is <br/>comfortable to hold the phone in the hand thanks to the<br/> polished zirconia beads and microscopic sand<br/> blasting, which is comparable to <br/>the iPhone 6s Plus.</p>
         </div>
     </div>
 </div>
@@ -359,7 +362,7 @@ The freedom to be delighted. <br/>Terra boasts an astounding screen-to-body rati
 	<div class="container">
         <div class="content">
         	<h3 class="h3">Seamlessly Cutting-edge Craftsmanship</h3>
-            <p class="desc">The Terra is functional as well as attractive. The quality of the zero RF interference aluminum alloy ensures good reception; the seamless connection to the backplane is obtained through a 90 degree cut with high precision and smoothness. In this case, the overflow of the signal is ensured without affecting the integrity of the metal case.</p>
+            <p class="desc">The Q Terra is functional as well as attractive. The quality of the zero RF interference aluminum alloy ensures good reception; the seamless connection to the backplane is obtained through a 90 degree cut with high precision and smoothness. In this case, the overflow of the signal is ensured without affecting the integrity of the metal case.</p>
         </div>
     </div>
 </div>
