--- a/qikuterra.html
+++ b/qikuterra.html
@@ -187,6 +187,9 @@ border:1px solid #E8382F;
 .navbar-nav > li > ul > li > a:hover,.navbar-nav > li > ul > li > a:focus,.navbar-nav > li > ul > li >.active > a {
     color: #fff !important;
 }
+.navbar-nav > li > ul.map > li > a:hover,.navbar-nav > li > ul.map > li > a:focus,.navbar-nav > li > ul .map> li >.active > a {
+    color: #000 !important;
+}
 /* ===== End navbar ===== */
             a.footer-hyperlink {
                 text-decoration: none;
@@ -221,6 +224,36 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
 .text-right {
     text-align: right !important;
 }
+
+/* navbar example for maps*/
+.navbar-nav > li >  ul > li > a {
+    padding: 24px 0;
+    margin-left: 10px;
+    margin-right: 15px;
+    text-transform: none;
+    font-size: 13px;
+    font-weight: 600;
+    color:#000;
+    text-decoration:none;
+}
+.navbar-nav > li >  ul.map  {
+    display:none;
+    position:absolute;
+    width:inherit;
+}
+.navbar-nav > li:hover >  ul  {
+    display:block;
+}
+.navbar-nav > li >  ul.map > li {
+    display:block;
+    background:#ffffff;
+    text-align: center;
+    padding: 15px 0px;
+}
+.additional-bodered-nav {
+border:1px solid #E8382F;
+}
+/* Ends here */
             /* Scroll to top button */
             .scrolltotop {
                 position: fixed;
@@ -272,13 +305,15 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                         <li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Forum&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a class="page-scroll">Global</a>
-                    <ul>
-                        <li><a href="http://www.qiku.com/index.html">中国</a></li>
-                        <li><a href="http://www.qiku.com/ru/qikuterra.html">Россия</a></li>
-                    </ul>
-                </li>
+                <li><a class="page-scroll">Select Region</a>
+                                <ul class="map">
+                                    <li><a href="http://www.qiku.com/en"><img src="/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
+                                    <li><a href="#"><img src="/img/chinese1-map.png" style="margin-bottom:-6px;" />&nbsp;<span>简体中文</span></a></li>
+                                    <li><a href="http://www.qiku.com/ru"><img src="/img/Россия-map.png" style="margin-bottom:-3px;" />&nbsp;<span>Россия</span></a></li>
+                                    <li><a href="http://www.qiku.com/in"><img src="/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
+                                    <li><a href="http://www.qiku.com/hk"><img src="/img/chinese2-map.png" style="margin-bottom:-6px;" />&nbsp;<span>中国&nbsp;&nbsp;</span></a></li>
+                                </ul>
+                            </li>
             </ul>
         </div>
     </div>
@@ -314,10 +349,10 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                 </div>
                 <p class="fun01-desc1">Color IMX278 + MONO IMX214</p>
                 <p class="fun01-desc2">83% Display Ratio</p>
-                <p class="fun01-desc3">Full-Metal Unibody Design</p>
+                <p class="fun01-desc3">Full-metal Unibody Design</p>
                 <p class="fun01-desc4">Snapdragon 808</p>
                 <p class="fun01-desc5">Sharp 1080P Screen</p>
-                <p class="fun01-desc6">165° Arc Curved Design</p>
+                <p class="fun01-desc6">165° Palm Arc Design</p>
                 <p class="fun01-desc7">2.5D Arc Glass</p>
                 <p class="fun01-desc8">3700mAh Battery </p>
                 <p class="fun01-desc9">1.4mm Ultra Narrow Bezel</p>
@@ -390,14 +425,13 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
     <div class="section function05 animate-init">
         <div class="container">
             <div class="content">
-                <h3 class="h3">6" Ultra Display      Bigger Is Always Better</h3>
+                <h3 class="h3">6" Ultra Display      <p>Bigger Is Always Better</p></h3>
                 <p class="desc">Bigger is always better once you are used to a much bigger <br />handset. This is why more and more people prefer a phablet <br />nowadays than ever. The stunning 6-inch Sharp 1080P <br />super-radiant screen has a saturation of 95% and an ultra <br /> high 1400:1 contrast ratio to offer a powerful vision full of<br /> bright colors.</p>
-                <h3 class="h31">Sharp 1080P Screen</h3>
+                <h3 class="h31">Sharp 1080P</h3>
                 <!-- <p class="desc1">å±å¹•</p> -->
                 <h3 class="h32">1920*1080 </h3>
                 <!-- <p class="desc2">åˆ†è¾¨çŽ‡</p> -->
-                <h3 class="h33">368</h3>
-                <p class="desc3">PPI</p>
+                <h3 class="h33">368 PPI</h3>
             </div>
             <div class="img">
                 <div class="img5"><img src="./images/qikuterra/img5.png" width="652" height="935" alt="" /></div>
