--- a/qikuterra/photo.html
+++ b/qikuterra/photo.html
@@ -234,10 +234,13 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                                     <li><a href="https://forums.qiku.com" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;Forum&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                                 </ul>
                             </li>                        
-                            <li><a class="page-scroll">Global</a>
-                                <ul>
-                                    <li><a href="http://www.qiku.com/index.html">中国</a></li>
-                                    <li><a href="http://www.qiku.com/ru/qikuterra.html">Россия</a></li>
+                            <li><a class="page-scroll">Select Region</a>
+                                <ul class="map">
+                                    <li><a href="http://www.qiku.com/en"><img src="/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
+                                    <li><a href="#"><img src="/img/chinese1-map.png" style="margin-bottom:-6px;" />&nbsp;<span>简体中文</span></a></li>
+                                    <li><a href="http://www.qiku.com/ru"><img src="/img/Россия-map.png" style="margin-bottom:-3px;" />&nbsp;<span>Россия</span></a></li>
+                                    <li><a href="http://www.qiku.com/in"><img src="/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
+                                    <li><a href="http://www.qiku.com/hk"><img src="/img/chinese2-map.png" style="margin-bottom:-6px;" />&nbsp;<span>中国&nbsp;&nbsp;</span></a></li>
                                 </ul>
                             </li>
                         </ul>
