--- a/qikuterra/photo.html
+++ b/qikuterra/photo.html
@@ -236,11 +236,11 @@ a.footer-hyperlink:hover, footer-hyperlink:focus,footer-hyperlink:active
                             </li>                        
                             <li><a class="page-scroll">Select Region</a>
                                 <ul class="map">
-                                    <li><a href="http://www.qiku.com/en"><img src="/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
-                                    <li><a href="#"><img src="/img/chinese1-map.png" style="margin-bottom:-6px;" />&nbsp;<span>简体中文</span></a></li>
-                                    <li><a href="http://www.qiku.com/ru"><img src="/img/Россия-map.png" style="margin-bottom:-3px;" />&nbsp;<span>Россия</span></a></li>
-                                    <li><a href="http://www.qiku.com/in"><img src="/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
-                                    <li><a href="http://www.qiku.com/hk"><img src="/img/chinese2-map.png" style="margin-bottom:-6px;" />&nbsp;<span>中国&nbsp;&nbsp;</span></a></li>
+                                    <li><a href="http://www.qiku.com/en"><img src="/in/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
+                                    <li><a href="#"><img src="/in/img/chinese1-map.png" style="margin-bottom:-6px;" />&nbsp;<span>简体中文</span></a></li>
+                                    <li><a href="http://www.qiku.com/ru"><img src="/in/img/Россия-map.png" style="margin-bottom:-3px;" />&nbsp;<span>Россия</span></a></li>
+                                    <li><a href="http://www.qiku.com/in"><img src="/in/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
+                                    <li><a href="http://www.qiku.com/hk"><img src="/in/img/chinese2-map.png" style="margin-bottom:-6px;" />&nbsp;<span>中国&nbsp;&nbsp;</span></a></li>
                                 </ul>
                             </li>
                         </ul>
