--- a/qikuterra/parameter.html
+++ b/qikuterra/parameter.html
@@ -350,10 +350,10 @@
       </div>
       <div class="modal-body" style="height:100px;">
      <ul style="margin-top:30px;">
-     <li style="float:left;margin-left:5px;"><a href="#" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
+     <li style="float:left;margin-left:5px;"><a href="http://www.qiku.com/en" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/english-map.png" style="margin-bottom:-6px;" />&nbsp;<span>English</span></a></li>
       <li style="float:left; margin-left:5px;"><a href="#" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/chinese1-map.png" style="margin-bottom:-6px;" />&nbsp;<span>香港</span></a></li>
-     <li style="float:left; margin-left:5px;"><a href="http://www.qiku.com/ru/qikuterra.html" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/Россия-map.png" style="margin-bottom:-6px;" />&nbsp;<span>Россия</span></a></li>
-     <li style="float:left; margin-left:5px;"><a href="#" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
+     <li style="float:left; margin-left:5px;"><a href="http://www.qiku.com/ru" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/Россия-map.png" style="margin-bottom:-6px;" />&nbsp;<span>Россия</span></a></li>
+     <li style="float:left; margin-left:5px;"><a href="http://www.qiku.com/in" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/india-map.png" style="margin-bottom:-6px;" />&nbsp;<span>India&nbsp;&nbsp;</span></a></li>
       <li style="float:left; margin-left:5px;"><a href="http://www.qiku.com/index.html" style="padding:10px; background:#eee;text-decoration:none"><img src="/in/img/chinese2-map.png" style="margin-bottom:-6px;" />&nbsp;<span>中国&nbsp;&nbsp;</span></a></li>
  </ul>
       </div>
