about page corrected

--- a/qikuterra.html
+++ b/qikuterra.html
@@ -45,7 +45,7 @@
                 <li>
                     <a class="page-scroll">All Products</a>
                     <ul>
-                        <li><a href="/">Q Terra</a></li>
+                        <li><a href="#">Q Terra</a></li>
                         <li><a href="#">Accessories</a></li>
                     </ul>
                 </li>
